--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ navigation: True
 <div class="wrapper">
 	<div id="content">
         <p>I am currently a Computer Science and Mathematics undergraduate from <a href="https://www.unc.edu/" target="_blank">The University of North Carolina at Chapel Hill</a>. 
-           <br><br>My primary interests lie in the field of machine learning and software development. I am also a teaching enthusiast, sharing my thoughts on tech topics and hopefully giving insights to people who came aross my blog.</p>
+           <br><br>My primary interests lie in the field of machine learning and software development. I am also a teaching enthusiast and I'd love to share my thoughts on tech topics and hopefully give insights to people who came aross my blog.</p>
 		<p>In my free time, I love to explore ideas and topics in tons of fields, including but not limited to academia, sports, traveling, etc. This blogging website is for recording some tutorials/notes that I used for my study, my thoughts on recent news, as well as some random artiles.</p>
         
         <p>I have also maintained a <a href="#" target="_blank">personal web profile</a>, if you are intereted in knowing more about me</p>
