--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ navigation: True
            <br><br>My primary interests lie in the field of machine learning and software development. I am also a teaching enthusiast and I'd love to share my thoughts on tech topics and hopefully give insights to people who came aross my blog.</p>
 		<p>In my free time, I love to explore ideas and topics in tons of fields, including but not limited to academia, sports, traveling, etc. This blogging website is for recording some tutorials/notes that I used for my study, my thoughts on recent news, as well as some random ideas.</p>
         
-        <p>I have also maintained a <a href="#" target="_blank" style="text-decoration: line-through">personal web profile</a>(under construction), if you are intereted in knowing more about me</p>
+        <p>I have also maintained a <a href="#" target="_blank" style="text-decoration: line-through;">personal web profile</a>(under construction), if you are intereted in knowing more about me</p>
     </div>
 </div>
 
