--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@ navigation: True
 
 <div class="wrapper">
 	<div id="content">
-        <p>Whassup! This is Yifan. I am currently a Computer Science and Mathematics undergraduate from <a href="https://www.unc.edu/" target="_blank">The University of North Carolina at Chapel Hill</a>. 
-           <br><br>My primary interests lie in the field of machine learning and software development. I am also a teaching enthusiast and I'd love to share my thoughts on tech topics and hopefully give insights to people who came aross my blog.</p>
-		<p>In my free time, I love to explore ideas and topics in tons of fields, including but not limited to academia, sports, traveling, etc. This blogging website is for recording some tutorials/notes that I used for my study, my thoughts on recent news, as well as some random ideas.</p>
+        <p>Whassup! This is Yifan. I am currently a Computer Science and Mathematics undergraduate from The University of North Carolina at Chapel Hill</a>. 
+           <br><br>My primary interests lie in the field of machine learning and software development but are generally curious about any rigorous disciplines. 
+           I am keeping this blog to record some tutorials/notes that I use for my study, my thoughts on news, as well as some random ideas. Hopefully it can 
+           give insgnts to people who come across.</p>
         
-        <p>I have also maintained a <a href="#" target="_blank" style="text-decoration: line-through;">personal web profile</a>(under construction), if you are intereted in knowing more about me</p>
+        <p>I have also maintained a <a href="#" target="_blank" style="text-decoration: line-through; color: #3c484e;">personal web profile</a>(under construction), if you are intereted in knowing more about me</p>
     </div>
 </div>
 
