--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ navigation: True
 <div class="wrapper">
 	<div id="content">
         <p>Whassup! This is Yifan. I am currently a Computer Science and Mathematics undergraduate from The University of North Carolina at Chapel Hill</a>. 
-           <br><br>My primary interests lie in the field of machine learning and software development but are generally curious about any rigorous disciplines. 
+           <br><br>My primary interests lie in the field of machine learning and software development yet I am generally curious about any rigorous disciplines. 
            I am keeping this blog to record some tutorials/notes that I use for my study, my thoughts on news, as well as some random ideas. Hopefully it can 
            give insgnts to people who come across.</p>
         
