--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ navigation: True
         <p>Whassup! This is Yifan. I am currently a Computer Science and Mathematics undergraduate from The University of North Carolina at Chapel Hill</a>. 
            <br><br>My primary interests lie in the field of machine learning and software development yet I am generally curious about any rigorous disciplines. 
            I am keeping this blog to record some tutorials/notes that I use for my study, my thoughts on news, as well as some random ideas. Hopefully it can 
-           give insgnts to people who come across.</p>
+           give insights to people who come across.</p>
         
         <p>I have also maintained a <a href="#" target="_blank" style="text-decoration: line-through; color: #3c484e;">personal web profile</a>(under construction), if you are intereted in knowing more about me</p>
     </div>
