--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ navigation: True
            I am keeping this blog to record some tutorials/notes that I use for my study, my thoughts on news, as well as some random ideas. Hopefully it can 
            give insights to people who come across.</p>
         
-        <p>I have also maintained a <a href="#" target="_blank" style="text-decoration: line-through; color: #3c484e;">personal web profile</a>(under construction), if you are intereted in knowing more about me</p>
+        <p>I have also maintained a <a href="#" target="_blank" style="text-decoration: line-through; color: #3c484e;">personal web profile</a>(under construction), if you are intereted in knowing more about me.</p>
     </div>
 </div>
 
