change landing image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ navigation: True
 
 <div class="wrapper">
 	<div id="content">
-        <p>Welcome to my blog. I am a UNC alumni and am currently pursing master degree in the field of computer science at CMU</a> 
+        <p>Welcome to my blog. I am a UNC alumni and am currently pursing master degree in the field of computer science at CMU.</a> 
            <br><br>My primary interests lie in cloud computing, software development and machine learning yet I am generally curious about any rigorous disciplines. 
            I am keeping this blog to record some tutorials/notes that I use for my study, my thoughts on news, as well as some random ideas. Hopefully it can 
            give insights to people who come across.</p>
