--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ navigation: True
 
 <div class="wrapper">
 	<div id="content">
-        <p>Welcome to my blog. I am a UNC alumni and am currently pursing master degree in the field of computer science at CMU.</a> 
-           <br><br>My primary interests lie in cloud computing, software development and machine learning yet I am generally curious about any rigorous disciplines. 
-           I am keeping this blog to record some tutorials/notes that I use for my study, my thoughts on news, as well as some random ideas. Hopefully it can 
-           give insights to people who come across.</p>
+        <p>Welcome to my blog. I am a UNC alumni and am currently pursing a master's degree in the field of computer science at CMU.</a> 
+           <br><br>My primary interests lie in cloud computing, software development and machine learning, yet I am generally curious about any rigorous disciplines. 
+           I am keeping this blog to record some tutorials/notes that I've been using for my study, my thoughts, as well as some random stuff. Hopefully it can
+           give some insights to people who come across.</p>
         
-        <p>I have also maintained a <a href="#" target="_blank" style="text-decoration: line-through; color: #3c484e;">personal web profile</a>(under construction), if you are intereted in knowing more about me.</p>
+        <p>I have also maintained a <a href="#" target="_blank" style="text-decoration: line-through; color: #3c484e;">personal web profile</a>(<b>under construction</b>) if you are intereted in knowing more about me.</p>
     </div>
 </div>
 
