update landing page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@ navigation: True
 <div class="wrapper">
 	<div id="content">
         <p>Welcome to my blog. I am a UNC alumni and am currently pursing a master's degree in the field of computer science at CMU.</a> 
-           <br><br>My primary interests lie in cloud computing, software development and machine learning, yet I am generally curious about any rigorous disciplines. 
-           I am keeping this blog to record some tutorials/notes that I've been using for my study, my thoughts, as well as some random stuff. Hopefully it can
-           give some insights to people who come across.</p>
+           <br><br>My primary interests lie in software development, cloud technology and recently securities, yet I am generally curious about any rigorous disciplines. 
+           Outside of tech, I also take an interest in fashion, sports and finance, which I might touch on a bit on this blog every now and then. I am keeping this blog 
+           to mostly record some tutorials/notes that I've been using for my study, my thoughts, as well as some random stuff. Hopefully it can give some insights to people 
+           who come across.</p>
         
         <p>I have also maintained a <a href="#" target="_blank" style="text-decoration: line-through; color: #3c484e;">personal web profile</a>(<b>under construction</b>) if you are intereted in knowing more about me.</p>
     </div>
